fixed gap

--- a/dev/sass/partials/catalog/_filters.sass
+++ b/dev/sass/partials/catalog/_filters.sass
@@ -121,4 +121,6 @@
         line-height: 21px
         width: 100%
         padding: 12px 40px
-        margin-top: 15px
+        margin-top: 16px
+        &.btn-secondary
+          margin-top: 24px
